# django-todolist

./: .env_example  .gitignore  README.md  README.nd  pyproject.toml  render.yaml  requirement.txt  requirements.txt
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
static/css/: baloon.css.map
templates/registration/: login.html  signup.html
todo/: forms.py  models.py  urls.py  utils.py  views.py
todo/migrations/: 0001_initial.py  0002_event.py
todo/static/css/: baloon.scss  clock.css  styles.css
todo/static/js/: baloon.js  trivia.js
todo/templates/: base.html
todo/templates/todo/: bored.html  covid.html  event.html  nasa.html  news.html  quote.html  test.html  todo.html  trivia.html
todo/templatetags/: tags.py
